fix mfa issues for cli, make sure we mark which ones can be used for cli
