# web/src/api/openapi.json
@@ -5624,11 +5624,15 @@
             "handlers.MFAMethodResponse": {
                 "type": "object",
                 "required": [
+                    "cli_capable",
                     "created_at",
                     "id",
                     "type"
                 ],
                 "properties": {
+                    "cli_capable": {
+                        "type": "boolean"
+                    },
                     "confirmed_at": {
                         "type": "string"
                     },
@@ -6014,6 +6018,10 @@
                     "label"
                 ],
                 "properties": {
+                    "cli_capable": {
+                        "description": "Optional: only for WebAuthn methods",
+                        "type": "boolean"
+                    },
                     "label": {
                         "type": "string",
                         "maxLength": 150
